# mai_oop_labs

./: README.md
Lab1/: CMakeLists.txt  main.cpp
Lab1/include/: euclid.h
Lab1/src/: euclid.cpp
Lab1/test/: tests.cpp
Lab2/: CMakeLists.txt  main.cpp
Lab2/include/: bitstring.h  vector.h
Lab2/src/: bitstring.cpp  vector.cpp
Lab2/test/: tests.cpp
